docs/cloud-ui: add getting-started, building-workflows, managing-credentials, viewing-results, account-settings

--- a/docs/cloud/building-workflows/add-parameters.mdx
+++ b/docs/cloud/building-workflows/add-parameters.mdx
@@ -10,7 +10,7 @@ Parameters let you create reusable workflows that accept different input values 
 
 ## Opening the parameters panel
 
-In the [workflow editor](/cloud/build-a-workflow), click the **Parameters** button in the header bar. A panel appears below the header showing all defined parameters and controls to add new ones.
+In the [workflow editor](/cloud/building-workflows/build-a-workflow), click the **Parameters** button in the header bar. A panel appears below the header showing all defined parameters and controls to add new ones.
 
 <img src="/images/cloud/parameters-panel-open.png" alt="Parameters panel" />
 
@@ -139,14 +139,14 @@ Process item {{ current_index }}: {{ current_value.name }}
   <Card
     title="Block Reference"
     icon="cube"
-    href="/cloud/configure-blocks"
+    href="/cloud/building-workflows/configure-blocks"
   >
     Configuration fields for every block type
   </Card>
   <Card
     title="Run Your Workflow"
     icon="play"
-    href="/cloud/run-a-workflow"
+    href="/cloud/building-workflows/run-a-workflow"
   >
     Execute workflows and fill in parameter values
   </Card>
