--- a/docs/cloud/building-workflows/manage-workflows.mdx
+++ b/docs/cloud/building-workflows/manage-workflows.mdx
@@ -4,7 +4,7 @@ subtitle: Create, organize, clone, import, and export reusable automations
 slug: cloud/manage-workflows
 ---
 
-Once you've [built a workflow](/cloud/build-a-workflow), the **Workflows** page is where you organize, share, and manage them. Each workflow is a reusable sequence of blocks that you can run with different inputs each time.
+Once you've [built a workflow](/cloud/building-workflows/build-a-workflow), the **Workflows** page is where you organize, share, and manage them. Each workflow is a reusable sequence of blocks that you can run with different inputs each time.
 
 Click **Workflows** in the left sidebar to open it.
 
@@ -92,14 +92,14 @@ Upload a PDF of your Standard Operating Procedure and Skyvern generates a workfl
   <Card
     title="Open the Editor"
     icon="pen-to-square"
-    href="/cloud/build-a-workflow"
+    href="/cloud/building-workflows/build-a-workflow"
   >
     Build automations visually with the drag-and-drop canvas
   </Card>
   <Card
     title="Add Parameters"
     icon="sliders"
-    href="/cloud/add-parameters"
+    href="/cloud/building-workflows/add-parameters"
   >
     Make workflows reusable with dynamic input values
   </Card>
