--- a/docs/cloud/building-workflows/run-a-workflow.mdx
+++ b/docs/cloud/building-workflows/run-a-workflow.mdx
@@ -18,7 +18,7 @@ Both take you to the parameters page where you fill in runtime values before the
 
 ## Filling in parameters
 
-The parameters page shows all [workflow parameters](/cloud/add-parameters) defined in the editor. Fill in a value for each one, or leave them at their defaults. Parameters without defaults must be filled in before running.
+The parameters page shows all [workflow parameters](/cloud/building-workflows/add-parameters) defined in the editor. Fill in a value for each one, or leave them at their defaults. Parameters without defaults must be filled in before running.
 
 
 ## Run settings
@@ -37,7 +37,7 @@ Below the parameters, you can configure settings for this specific run:
 
 ## Monitoring a run
 
-After clicking **Run**, you're taken to the live execution view, the same interface described in [Watching Live Execution](/cloud/monitor-a-run).
+After clicking **Run**, you're taken to the live execution view, the same interface described in [Watching Live Execution](/cloud/getting-started/monitor-a-run).
 
 For workflows, the left panel also shows a **block timeline**: a list of all blocks in the workflow. Completed blocks show a checkmark. The currently executing block is highlighted.
 
@@ -68,7 +68,7 @@ After a run completes, open it from **Runs** in the sidebar. The run detail page
 - **Recording**: Full video replay of the browser session
 - **Parameters**: The values you submitted for this run
 
-See [Reviewing results](/cloud/monitor-a-run#reviewing-results) for details on the Actions, Recording, Parameters, and Diagnostics tabs.
+See [Reviewing results](/cloud/getting-started/monitor-a-run#reviewing-results) for details on the Actions, Recording, Parameters, and Diagnostics tabs.
 
 ---
 
@@ -93,14 +93,14 @@ Access past runs from two places:
   <Card
     title="Build a Workflow"
     icon="pen-to-square"
-    href="/cloud/build-a-workflow"
+    href="/cloud/building-workflows/build-a-workflow"
   >
     Create and edit workflows in the visual editor
   </Card>
   <Card
     title="Block Reference"
     icon="cube"
-    href="/cloud/configure-blocks"
+    href="/cloud/building-workflows/configure-blocks"
   >
     Configuration fields for every block type
   </Card>
