--- a/docs/cloud/getting-started/run-a-task.mdx
+++ b/docs/cloud/getting-started/run-a-task.mdx
@@ -140,5 +140,5 @@ Click any template to launch it with pre-filled configuration, or use it as a st
 1. Your prompt is sent to Skyvern
 2. A cloud browser opens and navigates to the target URL (or finds one from your prompt)
 3. The AI analyzes the page, plans actions, and executes them step by step
-4. You're taken to the [live execution view](/cloud/monitor-a-run) where you can watch it happen in real time
+4. You're taken to the [live execution view](/cloud/getting-started/monitor-a-run) where you can watch it happen in real time
 5. When complete, results appear on the run detail page under **Runs**
