--- a/docs/cloud/getting-started/monitor-a-run.mdx
+++ b/docs/cloud/getting-started/monitor-a-run.mdx
@@ -4,7 +4,7 @@ subtitle: Monitor, interact with, and control running tasks
 slug: cloud/monitor-a-run
 ---
 
-When you run a task from the [Discover page](/cloud/run-a-task), you're taken to the live execution screen where you can watch the browser in real time.
+When you run a task from the [Discover page](/cloud/getting-started/run-a-task), you're taken to the live execution screen where you can watch the browser in real time.
 
 <img src="/images/cloud/live-execution-overview.png" alt="Live execution screen" />
 
@@ -84,9 +84,4 @@ Full video replay of the browser session. Every task is recorded automatically.
 
 The configuration you submitted: URL, prompt, engine, proxy location, webhook URL, data schema, and other settings.
 
-### Diagnostics tab
-
-Debug information for troubleshooting:
-- **LLM prompts**: The exact prompts sent to the AI model
-- **Element trees**: The DOM structure the AI analyzed
-- **Annotated screenshots**: Screenshots with element labels the AI used for decisions
+For more detail on every tab, see [Run Details](/cloud/viewing-results/run-details).
