fix image links

--- a/docs/cloud/getting-started/overview.mdx
+++ b/docs/cloud/getting-started/overview.mdx
@@ -31,8 +31,7 @@ Where you create and monitor automations.
 
 ### Agents
 
-{/* TODO: Replace with screenshot of Agents section */}
-<img src="/images/cloud/placeholder-agents-section.png" alt="Agents page showing pre-built automation templates" />
+{/* TODO: Add screenshot of Agents section */}
 
 Ready-made automation templates. Each agent is preconfigured with a prompt, target URL, and settings. Pick one to see it work or use it as a starting point for your own task.
 
