--- a/docs/cookbooks/bulk-invoice-downloader.mdx
+++ b/docs/cookbooks/bulk-invoice-downloader.mdx
@@ -132,9 +132,9 @@ This workflow uses the following parameters:
 {
   "parameters": [
     {
-      "key": "portal_url",
-      "parameter_type": "workflow",
-      "workflow_parameter_type": "string"
+      "key": "portal_url",                  // <-- parameter name
+      "parameter_type": "workflow",         // <-- always set to "workflow"
+      "workflow_parameter_type": "string"   // <-- can be string, file_url, credential_id, etc
     },
     {
       "key": "start_date",
@@ -183,9 +183,9 @@ This workflow uses the following parameters:
 
 ```yaml YAML
 parameters:
-  - key: portal_url
-    parameter_type: workflow
-    workflow_parameter_type: string
+  - key: portal_url                      # <-- parameter name
+    parameter_type: workflow             # <-- always set to "workflow"
+    workflow_parameter_type: string      # <-- can be string, file_url, credential_id, etc
   - key: start_date
     parameter_type: workflow
     workflow_parameter_type: string
@@ -227,8 +227,37 @@ The workflow chains together several blocks to automate the full invoice collect
 5. **For loop + File parser** — Parses each downloaded PDF to extract structured data
 6. **Send email** — Sends a summary with PDFs attached to the recipient
 
-**Workflow definition** is a YAML or JSON format that describes this sequence of blocks and their individual configurations. We will first define the blocks in isolation, then show the full workflow definition schema.
+We will add these blocks one by one in the **workflow definition**, a YAML/JSON file that contains the complete description of your workflow logic
 
+### Workflow Definition format
+
+<CodeGroup>
+```json JSON
+{
+  "title": "Bulk Invoice Downloader",
+  "description": "Download invoices from vendor portals, parse PDFs to extract amounts, and email a summary with attachments.",
+  "proxy_location": "RESIDENTIAL",        // <-- defaults to RESIDENTIAL
+  "workflow_definition": {
+    "version": 1,                         // <-- auto-increments when you make changes
+    "parameters": [],                     // <-- defined in Step 2
+    "blocks": []                          // <-- defined one by one in the next steps
+  }
+}
+```
+
+```yaml YAML
+title: Bulk Invoice Downloader
+description: "Download invoices from vendor portals, parse PDFs to extract amounts, and email a summary with attachments."
+proxy_location: RESIDENTIAL       # <-- defaults to RESIDENTIAL
+workflow_definition:
+  version: 1                      # <-- auto-increments when you make changes
+  parameters:
+    ...                           # <-- defined in Step 2
+
+  blocks:
+    ...                           # <-- defined one by one in the next steps
+```
+</CodeGroup>
 
 ### Login block
 
@@ -558,15 +587,148 @@ Send a summary email with PDFs attached.
 
 Save this complete definition to `invoice-workflow.yaml` (or `.json`) before running.
 
-<Accordion title="Complete workflow definition (YAML)">
-```yaml
+
+<Accordion title="Complete workflow definition">
+<CodeGroup>
+```json JSON
+{
+  "title": "Bulk Invoice Downloader",
+  "description": "Download invoices from vendor portals, parse PDFs to extract amounts, and email a summary with attachments.",
+  "proxy_location": "RESIDENTIAL",
+  "webhook_callback_url": "",
+  "persist_browser_session": false,
+  "workflow_definition": {
+    "version": 1,
+    "parameters": [
+      { "key": "portal_url", "parameter_type": "workflow", "workflow_parameter_type": "string" },
+      { "key": "start_date", "parameter_type": "workflow", "workflow_parameter_type": "string" },
+      { "key": "end_date", "parameter_type": "workflow", "workflow_parameter_type": "string" },
+      { "key": "recipient_email", "parameter_type": "workflow", "workflow_parameter_type": "string" },
+      { "key": "credentials", "parameter_type": "workflow", "workflow_parameter_type": "credential_id", "default_value": "your-credential-id" },
+      { "key": "smtp_host", "parameter_type": "aws_secret", "aws_key": "SKYVERN_SMTP_HOST_AWS_SES" },
+      { "key": "smtp_port", "parameter_type": "aws_secret", "aws_key": "SKYVERN_SMTP_PORT_AWS_SES" },
+      { "key": "smtp_username", "parameter_type": "aws_secret", "aws_key": "SKYVERN_SMTP_USERNAME_SES" },
+      { "key": "smtp_password", "parameter_type": "aws_secret", "aws_key": "SKYVERN_SMTP_PASSWORD_SES" }
+    ],
+    "blocks": [
+      {
+        "block_type": "login",
+        "label": "login_block",
+        "url": "{{portal_url}}",
+        "title": "login_block",
+        "parameter_keys": ["credentials"],
+        "navigation_goal": "Log in using the provided credentials.\nHandle any cookie consent popups.\nCOMPLETE when on the account dashboard or orders page.",
+        "error_code_mapping": {
+          "INVALID_CREDENTIALS": "Login failed - incorrect email or password",
+          "ACCOUNT_LOCKED": "Account has been locked or suspended"
+        },
+        "max_retries": 0,
+        "engine": "skyvern-1.0"
+      },
+      {
+        "block_type": "navigation",
+        "label": "nav_block",
+        "url": "",
+        "title": "nav_block",
+        "engine": "skyvern-1.0",
+        "parameter_keys": ["start_date", "end_date"],
+        "navigation_goal": "Navigate to Order History or My Orders.\nFilter orders between {{ start_date }} and {{ end_date }}.\nClick the Filter button.\nCOMPLETE when filtered results are visible.",
+        "max_retries": 0
+      },
+      {
+        "block_type": "extraction",
+        "label": "data_extraction_block",
+        "url": "",
+        "title": "data_extraction_block",
+        "data_extraction_goal": "Extract all visible orders: order ID, date, total amount, and status.",
+        "data_schema": {
+          "orders": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "order_id": { "type": "string", "description": "Unique identifier for the order" },
+                "date": { "type": "string", "description": "Date when the order was placed" },
+                "total": { "type": "number", "description": "Total amount for the order" },
+                "status": { "type": "string", "description": "Current status of the order" }
+              },
+              "required": ["order_id", "date", "total", "status"]
+            }
+          }
+        },
+        "max_retries": 0,
+        "engine": "skyvern-1.0"
+      },
+      {
+        "block_type": "for_loop",
+        "label": "for_1_block",
+        "loop_variable_reference": "{{data_extraction_block_output.orders}}",
+        "continue_on_failure": true,
+        "next_loop_on_failure": true,
+        "complete_if_empty": true,
+        "loop_blocks": [
+          {
+            "block_type": "file_download",
+            "label": "inv_download_block",
+            "url": "",
+            "title": "inv_download_block",
+            "navigation_goal": "Find order {{ current_value.order_id }}.\nClick Download Invoice.\nCOMPLETE when the PDF download starts.",
+            "download_suffix": "invoice_{{ current_value.order_id }}.pdf",
+            "max_retries": 0,
+            "engine": "skyvern-1.0"
+          }
+        ]
+      },
+      {
+        "block_type": "for_loop",
+        "label": "for_2_block",
+        "loop_variable_reference": "{{data_extraction_block_output.orders}}",
+        "continue_on_failure": true,
+        "next_loop_on_failure": true,
+        "complete_if_empty": true,
+        "loop_blocks": [
+          {
+            "block_type": "file_url_parser",
+            "label": "parse_block",
+            "file_url": "SKYVERN_DOWNLOAD_DIRECTORY/invoice_{{ current_value.order_id }}.pdf",
+            "file_type": "csv",
+            "json_schema": {
+              "type": "object",
+              "properties": {
+                "invoice_id": { "type": "string", "description": "Unique identifier for the invoice" },
+                "amount": { "type": "number", "description": "Total amount of the invoice" },
+                "date": { "type": "string", "description": "Date of the invoice, typically in YYYY-MM-DD format" }
+              },
+              "required": ["invoice_id", "amount", "date"]
+            }
+          }
+        ]
+      },
+      {
+        "block_type": "send_email",
+        "label": "email_block",
+        "smtp_host_secret_parameter_key": "smtp_host",
+        "smtp_port_secret_parameter_key": "smtp_port",
+        "smtp_username_secret_parameter_key": "smtp_username",
+        "smtp_password_secret_parameter_key": "smtp_password",
+        "sender": "hello@skyvern.com",
+        "recipients": ["{{recipient_email}}"],
+        "subject": "Ember Roasters Invoices from {{start_date}} to {{end_date}}",
+        "body": "{{for_2_block_output}}",
+        "file_attachments": ["SKYVERN_DOWNLOAD_DIRECTORY"]
+      }
+    ]
+  }
+}
+```
+```yaml YAML
 title: Bulk Invoice Downloader
-description: ""
+description: "Download invoices from vendor portals, parse PDFs to extract amounts, and email a summary with attachments."
 proxy_location: RESIDENTIAL
 webhook_callback_url: ""
 persist_browser_session: false
 workflow_definition:
-  version: 2
+  version: 1
   parameters:
     - key: portal_url
       parameter_type: workflow
@@ -721,140 +883,7 @@ workflow_definition:
       file_attachments:
         - SKYVERN_DOWNLOAD_DIRECTORY
 ```
-</Accordion>
-
-<Accordion title="Complete workflow definition (JSON)">
-```json
-{
-  "title": "Bulk Invoice Downloader",
-  "description": "",
-  "proxy_location": "RESIDENTIAL",
-  "webhook_callback_url": "",
-  "persist_browser_session": false,
-  "workflow_definition": {
-    "version": 2,
-    "parameters": [
-      { "key": "portal_url", "parameter_type": "workflow", "workflow_parameter_type": "string" },
-      { "key": "start_date", "parameter_type": "workflow", "workflow_parameter_type": "string" },
-      { "key": "end_date", "parameter_type": "workflow", "workflow_parameter_type": "string" },
-      { "key": "recipient_email", "parameter_type": "workflow", "workflow_parameter_type": "string" },
-      { "key": "credentials", "parameter_type": "workflow", "workflow_parameter_type": "credential_id", "default_value": "your-credential-id" },
-      { "key": "smtp_host", "parameter_type": "aws_secret", "aws_key": "SKYVERN_SMTP_HOST_AWS_SES" },
-      { "key": "smtp_port", "parameter_type": "aws_secret", "aws_key": "SKYVERN_SMTP_PORT_AWS_SES" },
-      { "key": "smtp_username", "parameter_type": "aws_secret", "aws_key": "SKYVERN_SMTP_USERNAME_SES" },
-      { "key": "smtp_password", "parameter_type": "aws_secret", "aws_key": "SKYVERN_SMTP_PASSWORD_SES" }
-    ],
-    "blocks": [
-      {
-        "block_type": "login",
-        "label": "login_block",
-        "url": "{{portal_url}}",
-        "title": "login_block",
-        "parameter_keys": ["credentials"],
-        "navigation_goal": "Log in using the provided credentials.\nHandle any cookie consent popups.\nCOMPLETE when on the account dashboard or orders page.",
-        "error_code_mapping": {
-          "INVALID_CREDENTIALS": "Login failed - incorrect email or password",
-          "ACCOUNT_LOCKED": "Account has been locked or suspended"
-        },
-        "max_retries": 0,
-        "engine": "skyvern-1.0"
-      },
-      {
-        "block_type": "navigation",
-        "label": "nav_block",
-        "url": "",
-        "title": "nav_block",
-        "engine": "skyvern-1.0",
-        "parameter_keys": ["start_date", "end_date"],
-        "navigation_goal": "Navigate to Order History or My Orders.\nFilter orders between {{ start_date }} and {{ end_date }}.\nClick the Filter button.\nCOMPLETE when filtered results are visible.",
-        "max_retries": 0
-      },
-      {
-        "block_type": "extraction",
-        "label": "data_extraction_block",
-        "url": "",
-        "title": "data_extraction_block",
-        "data_extraction_goal": "Extract all visible orders: order ID, date, total amount, and status.",
-        "data_schema": {
-          "orders": {
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "order_id": { "type": "string", "description": "Unique identifier for the order" },
-                "date": { "type": "string", "description": "Date when the order was placed" },
-                "total": { "type": "number", "description": "Total amount for the order" },
-                "status": { "type": "string", "description": "Current status of the order" }
-              },
-              "required": ["order_id", "date", "total", "status"]
-            }
-          }
-        },
-        "max_retries": 0,
-        "engine": "skyvern-1.0"
-      },
-      {
-        "block_type": "for_loop",
-        "label": "for_1_block",
-        "loop_variable_reference": "{{data_extraction_block_output.orders}}",
-        "continue_on_failure": true,
-        "next_loop_on_failure": true,
-        "complete_if_empty": true,
-        "loop_blocks": [
-          {
-            "block_type": "file_download",
-            "label": "inv_download_block",
-            "url": "",
-            "title": "inv_download_block",
-            "navigation_goal": "Find order {{ current_value.order_id }}.\nClick Download Invoice.\nCOMPLETE when the PDF download starts.",
-            "download_suffix": "invoice_{{ current_value.order_id }}.pdf",
-            "max_retries": 0,
-            "engine": "skyvern-1.0"
-          }
-        ]
-      },
-      {
-        "block_type": "for_loop",
-        "label": "for_2_block",
-        "loop_variable_reference": "{{data_extraction_block_output.orders}}",
-        "continue_on_failure": true,
-        "next_loop_on_failure": true,
-        "complete_if_empty": true,
-        "loop_blocks": [
-          {
-            "block_type": "file_url_parser",
-            "label": "parse_block",
-            "file_url": "SKYVERN_DOWNLOAD_DIRECTORY/invoice_{{ current_value.order_id }}.pdf",
-            "file_type": "csv",
-            "json_schema": {
-              "type": "object",
-              "properties": {
-                "invoice_id": { "type": "string", "description": "Unique identifier for the invoice" },
-                "amount": { "type": "number", "description": "Total amount of the invoice" },
-                "date": { "type": "string", "description": "Date of the invoice, typically in YYYY-MM-DD format" }
-              },
-              "required": ["invoice_id", "amount", "date"]
-            }
-          }
-        ]
-      },
-      {
-        "block_type": "send_email",
-        "label": "email_block",
-        "smtp_host_secret_parameter_key": "smtp_host",
-        "smtp_port_secret_parameter_key": "smtp_port",
-        "smtp_username_secret_parameter_key": "smtp_username",
-        "smtp_password_secret_parameter_key": "smtp_password",
-        "sender": "hello@skyvern.com",
-        "recipients": ["{{recipient_email}}"],
-        "subject": "Ember Roasters Invoices from {{start_date}} to {{end_date}}",
-        "body": "{{for_2_block_output}}",
-        "file_attachments": ["SKYVERN_DOWNLOAD_DIRECTORY"]
-      }
-    ]
-  }
-}
-```
+</CodeGroup>
 </Accordion>
 
 ---
