Fix review issues across cloud UI docs
- Align tab names (Overview, Output, Parameters, Recording, Code) across
  monitor-a-run, run-your-first-task, and run-details
- Align block category taxonomy in build-a-workflow with configure-blocks
  (5 categories: Browser Automation, Data and Extraction, Control Flow,
  Files, Communication)
- Recover lost content from deleted running-tasks.mdx: add prompt tips,
  cost control, and debugging guidance to run-a-task
- Remove TODO comment and fix undefined terms in overview
- Remove false drag-and-drop claim in manage-workflows
- Fix nonexistent "Advanced engine" reference to "Skyvern 2.0"
- Standardize engine capitalization to "Skyvern 2.0 with Code"
- Standardize "Browser Address" to "CDP Address"
- Flesh out organization-settings with invite/remove member flow
- Add Profile tab description to profile-settings
- Add billing note for cancellation credits in monitor-a-run
- Fix TOTP source field docs and result count wording
- Complete status color mapping in run-history
- Add next-steps cards to run-a-task
- Remove 3 orphaned images

--- a/docs/cloud/account-settings/api-keys.mdx
+++ b/docs/cloud/account-settings/api-keys.mdx
@@ -1,5 +1,5 @@
 ---
-title: API Keys
+title: API Key
 subtitle: Authenticate programmatic access to Skyvern
 slug: cloud/account-settings/api-keys
 ---
@@ -8,7 +8,7 @@ Every API call to Skyvern requires an API key. The key identifies your organizat
 
 ## Finding your API key
 
-Open **Settings** in the sidebar. The **API Keys** card shows your current key in a masked field. Click the **eye icon** to reveal the full value, or the **copy icon** to copy it to your clipboard.
+Open **Settings** in the sidebar. Your API key is shown in a masked field. Click the **eye icon** to reveal the full value, or the **copy icon** to copy it to your clipboard.
 
 <img src="/images/cloud/settings-api-key.png" alt="API key display with reveal and copy buttons" />
 
