--- a/docs/cloud/account-settings/organization-settings.mdx
+++ b/docs/cloud/account-settings/organization-settings.mdx
@@ -8,11 +8,21 @@ Everything in Skyvern — workflows, credentials, runs, API keys — belongs to 
 
 ## Organization details
 
-Open **Settings** in the sidebar. The **Settings** card at the top shows your current environment and organization. The organization name appears throughout the UI and in API responses.
+Open **Settings** in the sidebar. The Settings page shows your organization name and current plan. The organization name appears throughout the UI and in API responses.
+
+To rename your organization, update the **Organization Name** field and click **Save**.
 
 ## Team members
 
-Plans that support multiple users show a **Members** section where you can invite teammates by email and manage who has access to the organization's resources.
+Plans that support multiple users (Pro and Enterprise) show a **Members** section below the organization details.
+
+### Inviting members
+
+Click **Invite Member**, enter their email address, and send the invitation. They'll receive an email with a link to join your organization. Once they accept, they appear in the members list with full access to workflows, runs, credentials, and API keys.
+
+### Removing members
+
+Click the **remove icon** next to a member's name to revoke their access. They lose access to all organization resources immediately.
 
 <Warning>
 When removing a team member, also review your [API keys](/cloud/account-settings/api-keys) — they may have copied keys that remain active.
