--- a/docs/cloud/account-settings/profile-settings.mdx
+++ b/docs/cloud/account-settings/profile-settings.mdx
@@ -6,6 +6,10 @@ slug: cloud/account-settings/profile-settings
 
 Click your avatar at the bottom of the sidebar to open the **Account** page. It has two tabs: **Profile** and **Security**.
 
+## Profile
+
+The **Profile** tab shows your display name and email address. Update your display name and click **Save** to apply.
+
 ## Security
 
 The **Security** tab is where you manage your password and review active sessions.
