--- a/docs/cloud/building-workflows/manage-workflows.mdx
+++ b/docs/cloud/building-workflows/manage-workflows.mdx
@@ -94,7 +94,7 @@ Upload a PDF of your Standard Operating Procedure and Skyvern generates a workfl
     icon="pen-to-square"
     href="/cloud/building-workflows/build-a-workflow"
   >
-    Build automations visually with the drag-and-drop canvas
+    Build automations visually with the workflow editor
   </Card>
   <Card
     title="Add Parameters"
