--- a/docs/cloud/getting-started/monitor-a-run.mdx
+++ b/docs/cloud/getting-started/monitor-a-run.mdx
@@ -34,9 +34,9 @@ The live browser stream is active while the task is still in progress:
 | `paused` | Waiting for human interaction |
 | `completed` | Stream closed. View the recording instead. |
 | `failed` | Stream closed. View the recording instead. |
-| `terminated` | Stream closed |
-| `timed_out` | Stream closed |
-| `canceled` | Stream closed |
+| `terminated` | Stream closed. View the recording instead. |
+| `timed_out` | Stream closed. View the recording instead. |
+| `canceled` | Stream closed. View the recording instead. |
 
 Once a task reaches a final state, the live stream closes. Open the run from **Runs** in the sidebar to access the full recording, screenshots, and action history.
 
@@ -61,27 +61,20 @@ Taking control pauses the AI agent. Remember to release control so the agent can
 
 You can cancel a task at any time while it's running or queued. Click the **Cancel** button in the task header. A confirmation dialog appears before the task is stopped. The task transitions to `canceled` and any configured webhook fires with the canceled status.
 
+<Note>
+Credits for actions already taken are still consumed. Canceling stops future actions but does not refund past ones.
+</Note>
+
 ---
 
 ## Reviewing results
 
-Once a task finishes, open it from **Runs** to see the full results.
+Once a task finishes, open it from **Runs** to see the full results. The run detail page has five tabs:
 
-### Actions tab
+- **Overview**: The AI's reasoning timeline alongside browser screenshots. Each Thought, Block, and Action card shows what the agent saw and why it acted.
+- **Output**: The complete JSON output and any downloaded files.
+- **Parameters**: The configuration you submitted: URL, prompt, engine, proxy location, webhook URL, data schema, and other settings.
+- **Recording**: Full video replay of the browser session. Every task is recorded automatically.
+- **Code**: Auto-generated Python code to reproduce this task via the API or SDK (when code generation is enabled).
 
-Step-by-step breakdown of every action the AI took. Each entry shows:
-
-- **Action type**: Click, Type, Scroll, Select, etc.
-- **Success or failure** indicator
-- **AI reasoning**: Why the agent chose this action
-- **Input details**: For type actions, the text that was entered
-
-### Recording tab
-
-Full video replay of the browser session. Every task is recorded automatically.
-
-### Parameters tab
-
-The configuration you submitted: URL, prompt, engine, proxy location, webhook URL, data schema, and other settings.
-
-For more detail on every tab, see [Run Details](/cloud/viewing-results/run-details).
+For a full walkthrough of each tab, see [Run Details](/cloud/viewing-results/run-details).
